AIC2023_git/AIC2023/logs/compile/dummy1
/Users/pau/Desktop/AIColisseum/ColisseumAI/AIC2023_git/AIC2023/src/dummy1/Pitcher.java:48: error: ')' expected
            else if ((int)(Math.random()*4)==1 or !uc.canMove(unitDirection)){
                                              ^
/Users/pau/Desktop/AIColisseum/ColisseumAI/AIC2023_git/AIC2023/src/dummy1/Pitcher.java:48: error: not a statement
            else if ((int)(Math.random()*4)==1 or !uc.canMove(unitDirection)){
                                               ^
/Users/pau/Desktop/AIColisseum/ColisseumAI/AIC2023_git/AIC2023/src/dummy1/Pitcher.java:48: error: ';' expected
            else if ((int)(Math.random()*4)==1 or !uc.canMove(unitDirection)){
                                                 ^
/Users/pau/Desktop/AIColisseum/ColisseumAI/AIC2023_git/AIC2023/src/dummy1/Pitcher.java:48: error: ';' expected
            else if ((int)(Math.random()*4)==1 or !uc.canMove(unitDirection)){
                                                                            ^
/Users/pau/Desktop/AIColisseum/ColisseumAI/AIC2023_git/AIC2023/src/dummy1/Pitcher.java:60: error: 'else' without 'if'
            } else if (uc.canMove(unitDirection)) uc.move(unitDirection);
              ^
/Users/pau/Desktop/AIColisseum/ColisseumAI/AIC2023_git/AIC2023/src/dummy1/Pitcher.java:63: error: ')' expected
        if ((int)(Math.random()*4)==1 or !uc.canMove(unitDirection)){
                                     ^
/Users/pau/Desktop/AIColisseum/ColisseumAI/AIC2023_git/AIC2023/src/dummy1/Pitcher.java:63: error: not a statement
        if ((int)(Math.random()*4)==1 or !uc.canMove(unitDirection)){
                                      ^
/Users/pau/Desktop/AIColisseum/ColisseumAI/AIC2023_git/AIC2023/src/dummy1/Pitcher.java:63: error: ';' expected
        if ((int)(Math.random()*4)==1 or !uc.canMove(unitDirection)){
                                        ^
/Users/pau/Desktop/AIColisseum/ColisseumAI/AIC2023_git/AIC2023/src/dummy1/Pitcher.java:63: error: ';' expected
        if ((int)(Math.random()*4)==1 or !uc.canMove(unitDirection)){
                                                                   ^
/Users/pau/Desktop/AIColisseum/ColisseumAI/AIC2023_git/AIC2023/src/dummy1/Pitcher.java:75: error: 'else' without 'if'
        } else if (uc.canMove(unitDirection)) uc.move(unitDirection);
          ^
10 errors

BUILD FAILED

/Users/pau/Desktop/AIColisseum/ColisseumAI/AIC2023_git/AIC2023/build.xml:156: The following error occurred while executing this line:
/Users/pau/Desktop/AIColisseum/ColisseumAI/AIC2023_git/AIC2023/build.xml:136: The following error occurred while executing this line:
/Users/pau/Desktop/AIColisseum/ColisseumAI/AIC2023_git/AIC2023/build.xml:68: Compile failed; see the compiler error output for details.
	at org.apache.tools.ant.ProjectHelper.addLocationToBuildException(ProjectHelper.java:582)
	at org.apache.tools.ant.taskdefs.MacroInstance.execute(MacroInstance.java:394)
	at org.apache.tools.ant.UnknownElement.execute(UnknownElement.java:299)
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:498)
	at org.apache.tools.ant.dispatch.DispatchUtils.execute(DispatchUtils.java:99)
	at org.apache.tools.ant.Task.perform(Task.java:350)
	at org.apache.tools.ant.Target.execute(Target.java:449)
	at org.apache.tools.ant.Target.performTasks(Target.java:470)
	at org.apache.tools.ant.Project.executeSortedTargets(Project.java:1401)
	at org.apache.tools.ant.Project.executeTarget(Project.java:1374)
	at org.apache.tools.ant.helper.DefaultExecutor.executeTargets(DefaultExecutor.java:41)
	at org.apache.tools.ant.Project.executeTargets(Project.java:1264)
	at org.apache.tools.ant.Main.runBuild(Main.java:818)
	at org.apache.tools.ant.Main.startAnt(Main.java:223)
	at org.apache.tools.ant.Main.start(Main.java:190)
	at org.apache.tools.ant.Main.main(Main.java:274)
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:498)
	at com.intellij.rt.ant.execution.AntMain2.main(AntMain2.java:31)
Caused by: /Users/pau/Desktop/AIColisseum/ColisseumAI/AIC2023_git/AIC2023/build.xml:136: The following error occurred while executing this line:
/Users/pau/Desktop/AIColisseum/ColisseumAI/AIC2023_git/AIC2023/build.xml:68: Compile failed; see the compiler error output for details.
	at org.apache.tools.ant.ProjectHelper.addLocationToBuildException(ProjectHelper.java:582)
	at org.apache.tools.ant.taskdefs.MacroInstance.execute(MacroInstance.java:394)
	at org.apache.tools.ant.UnknownElement.execute(UnknownElement.java:299)
	at sun.reflect.GeneratedMethodAccessor4.invoke(Unknown Source)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:498)
	at org.apache.tools.ant.dispatch.DispatchUtils.execute(DispatchUtils.java:99)
	at org.apache.tools.ant.Task.perform(Task.java:350)
	at java.util.Vector.forEach(Vector.java:1283)
	at org.apache.tools.ant.taskdefs.Sequential.execute(Sequential.java:67)
	at org.apache.tools.ant.UnknownElement.execute(UnknownElement.java:299)
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:498)
	at org.apache.tools.ant.dispatch.DispatchUtils.execute(DispatchUtils.java:99)
	at org.apache.tools.ant.Task.perform(Task.java:350)
	at org.apache.tools.ant.taskdefs.MacroInstance.execute(MacroInstance.java:391)
	... 22 more
Caused by: /Users/pau/Desktop/AIColisseum/ColisseumAI/AIC2023_git/AIC2023/build.xml:68: Compile failed; see the compiler error output for details.
	at org.apache.tools.ant.taskdefs.Javac.compile(Javac.java:1373)
	at org.apache.tools.ant.taskdefs.Javac.execute(Javac.java:1092)
	at org.apache.tools.ant.UnknownElement.execute(UnknownElement.java:299)
	at sun.reflect.GeneratedMethodAccessor4.invoke(Unknown Source)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:498)
	at org.apache.tools.ant.dispatch.DispatchUtils.execute(DispatchUtils.java:99)
	at org.apache.tools.ant.Task.perform(Task.java:350)
	at java.util.Vector.forEach(Vector.java:1283)
	at org.apache.tools.ant.taskdefs.Sequential.execute(Sequential.java:67)
	at org.apache.tools.ant.UnknownElement.execute(UnknownElement.java:299)
	at sun.reflect.GeneratedMethodAccessor4.invoke(Unknown Source)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:498)
	at org.apache.tools.ant.dispatch.DispatchUtils.execute(DispatchUtils.java:99)
	at org.apache.tools.ant.Task.perform(Task.java:350)
	at org.apache.tools.ant.taskdefs.MacroInstance.execute(MacroInstance.java:391)
	... 38 more
